# ST0245-001

./: pyproject.toml
laboratorios/lab01/codigo/: adn.py  ways.py
laboratorios/lab01/ejercicioEnLinea/: CodingBat Exercices.java
laboratorios/lab02/codigo/: Array2.java  Array3.java  InsertionSortTest.py  MergeSortTest.py
laboratorios/lab02/ejercicioEnLinea/: Array2.java  Array3.java
laboratorios/lab03/codigo/: Banco.py  ChoosePivot.py  DoubleLinkedList.py  MedellinMapData.py  Neveras.py  NotasEstudiantes.py
laboratorios/lab03/ejercicioEnLinea/: BrokenKeyboard.py
laboratorios/lab04/codigo/Punto 1.1/: Bee.py  ConjuntoDeDatosCon15abejas.txt  main.py
laboratorios/lab04/codigo/Punto 2.1/: main.py
laboratorios/lab05/codigo/: JAJAJAJA.txt  Lector.java  Main.java
laboratorios/lab05/ejercicioEnLinea/: Graph.java  GraphAL.java  Lector.java  Punto2-1.java
proyecto/Codigo/: Giny.py  Main.py  Node.py  Tree.py
proyecto/codigo/: DatasetUTF-8B.csv  Gini.py  csv reader.py
talleres/taller01/: Fecha.java  Punto.java
talleres/taller02/: Punto1.py  Punto2.py  Punto3.py
talleres/taller03/: Punto 1.py  Punto 2.py
talleres/taller04/: Taller 4.py
talleres/taller05/: taller5.py
talleres/taller06/: BeeArray.py
talleres/taller07/: taller7.py
talleres/taller08/: BarService.py  InvertirStack.py  Neveras.py  Polaca.py
talleres/taller09/: Punto1.py  Punto234.py
talleres/taller10/: Test.txt  main.py  personas-en-situacion-de-vulnerabilidad.csv
talleres/taller11/: GraphAM.py  GraphAl.py
talleres/taller12/: main.py
